--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,30 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  encoding: unicode
+  pool: 25
+  username: q_board
+  password: q_board
+  port: 5432
+  reconnect: true
+  variables:
+    tcp_keepalives_idle: 60
+    tcp_keepalives_interval: 60
+    tcp_keepalives_count: 100
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  host: localhost
+  database: q_board_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  host: localhost
+  database: q_board_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  host: localhost
+  database: q_board_production
